...
        android:orientation="vertical"
        app:layout_constrainedWidth="true"
        app:layout_constraintStart_toEndOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/barrier2">

        <TextView
            android:id="@+id/meeting_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit ="marquee_forever"
            android:focusable="true"
...
            app:layout_constraintRight_toLeftOf="@id/barrier2"
            app:layout_constraintTop_toTopOf="@id/fragment_layout" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/meeting_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@id/fragment_layout"
        app:layout_constraintRight_toRightOf="@id/fragment_layout"
...
