<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.Activities.Activities.MainActivity">
    <item
        android:id="@+id/date_filter"
        android:orderInCategory="1"
        android:title="@string/action_date"
        app:showAsAction="never" />
    <item
        android:id="@+id/room_filter"
        android:orderInCategory="2"
        android:title="@string/action_room"
        app:showAsAction="never" />
</menu>
